# ba_perception_pipeline

./: CLAUDE.md  GEMINI.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
Docs/: PLAN.md  PLAN_AUTOCALIB.md  PLAN_ROS2_CAMERA-Claude.md
ba_perception_pipeline/: backprojection.py  goal_generator_node.py  perception_pipeline_node.py  vlm_client.py
config/: depth_calibration.yaml  perception_pipeline.yaml
launch/: ba_perception.launch.py  perception_pipeline.launch.py
scripts/: calibrate_depth.py  diagnose_perception.py  generate_hand_eye.py  test_moveit_goal.py
