<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ba_perception_pipeline</name>
  <version>0.1.0</version>
  <description>
    ROS2 perception pipeline for the BA robot arm.
    Combines depth estimation (DA V2), VLM target detection, and
    backprojection into a single in-process node to avoid CycloneDDS
    WSL2 loopback limitations with large messages.
  </description>
  <maintainer email="noreply@example.org">Thomas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
